# ThreadHook

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/codeedge/threadhook/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hacker.cpp  hook.cpp  hook.h
app/src/main/java/com/codeedge/threadhook/: HookApplication.kt  MainActivity.kt  ThreadHook.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/codeedge/threadhook/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
